plugin main logic

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,18 @@
     "name": "mmetayer/extension-installer",
     "description": "Easily install your Akeneo PIM extensions and connectors",
     "type": "composer-plugin",
+    "license": "OSL 3.0",
+    "authors": [
+        {
+            "name": "Mathias Métayer",
+            "email": "mathias.metayer@akeneo.com"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "Akeneo\\Extensions\\": "src"
+        }
+    },
     "require": {
         "php": "^7.1",
         "composer-plugin-api": "^1.1"
@@ -9,11 +21,7 @@
     "require-dev": {
         "composer/composer": "^1.4"
     },
-    "license": "OSL 3.0",
-    "authors": [
-        {
-            "name": "Mathias Métayer",
-            "email": "mathias.metayer@akeneo.com"
-        }
-    ]
+    "extra": {
+        "class": "Akeneo\\Extensions\\Installer"
+    }
 }
